welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: reassignment to val
	while (getCouleurSol=Color.green) {
                            ^